@@ -32,6 +32,9 @@ PHP                                                                        NEWS
 - Session:
   . Removed broken url support for transferring session ID. (ilutov)
 
+- Standard:
+  . Fix serialization of RC1 objects appearing in object graph twice. (ilutov)
+
 06 Jul 2023, PHP 8.1.21
 
 - CLI:
